// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Cards renders in stateless manner successfully 1`] = `""`;

exports[`Cards Cards renders successfully with provided props 1`] = `""`;

exports[`Cards with filters Cards renders with filters successfully with provided props 1`] = `
<Cards
  filters={Object {}}
>
  <div
    className="cards__container"
  >
    <div
      className="cards__container__card__preloader"
      key="0"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="1"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="2"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="3"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
  </div>
</Cards>
`;

exports[`Mocking axios for Cards with all Filters Cards renders with filters successfully with provided props 1`] = `
<Cards
  filters={
    Object {
      "land_success": false,
      "launch_success": false,
      "launch_year": 2013,
    }
  }
>
  <div
    className="cards__container"
  >
    <div
      className="cards__container__card__preloader"
      key="0"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="1"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="2"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="3"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
  </div>
</Cards>
`;

exports[`Mocking axios for Cards with all Filters fetch data on Initial Load 1`] = `
<Cards
  filters={Object {}}
>
  <div
    className="cards__container"
  >
    <div
      className="cards__container__card__preloader"
      key="0"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="1"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="2"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
    <div
      className="cards__container__card__preloader"
      key="3"
    >
      <div
        className="cards__container__card__icon__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
      <div
        className="cards__container__card__info__preloader"
      />
    </div>
  </div>
</Cards>
`;
